[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Interactables/Assets/Platform Portal.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/Sounds/Teleport.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Interactables/Assets/PortalB.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Interactables/Assets/PortalA.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Interactables/MovingPortal.gd" type="Script" id=5]
[ext_resource path="res://Assets/Interactables/Moving Platform.gd" type="Script" id=6]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
//if you need to get help with shaders just use chatgpt tbh it saves time learning how to use shaders
uniform vec4 tint_color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float difference: hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec4 tex = texture(TEXTURE, UV);
    
    vec3 tinted_color = mix(tex.rgb, tint_color.rgb, difference);
    
    COLOR.rgb = tinted_color;
    COLOR.a = tex.a;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/tint_color = Color( 0.556863, 0, 0, 1 )
shader_param/difference = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 99.5, 14.5 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
//if you need to get help with shaders just use chatgpt tbh it saves time learning how to use shaders
uniform vec4 tint_color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float difference: hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec4 tex = texture(TEXTURE, UV);
    
    vec3 tinted_color = mix(tex.rgb, tint_color.rgb, difference);
    
    COLOR.rgb = tinted_color;
    COLOR.a = tex.a;
}
"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/difference = 0.0

[sub_resource type="RectangleShape2D" id=4739]
extents = Vector2( 19.75, 60 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
//if you need to get help with shaders just use chatgpt tbh it saves time learning how to use shaders
uniform vec4 tint_color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float difference: hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec4 tex = texture(TEXTURE, UV);
    
    vec3 tinted_color = mix(tex.rgb, tint_color.rgb, difference);
    
    COLOR.rgb = tinted_color;
    COLOR.a = tex.a;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/difference = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.75, 60 )

[node name="MovingPortal" type="Node2D"]
material = SubResource( 4 )
position = Vector2( -609, 377 )
script = ExtResource( 5 )

[node name="MovingPlatform" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="PointA" type="Position2D" parent="MovingPlatform"]

[node name="PointB" type="Position2D" parent="MovingPlatform"]

[node name="Platform" type="Position2D" parent="MovingPlatform"]

[node name="Body" type="KinematicBody2D" parent="MovingPlatform/Platform"]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/Platform/Body"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="MovingPlatform/Platform"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Portal_A" type="Position2D" parent="MovingPlatform/Platform"]
show_behind_parent = true
position = Vector2( 0, -68 )
rotation = 1.5708
scale = Vector2( 1.94, 1.637 )

[node name="Texture" type="Sprite" parent="MovingPlatform/Platform/Portal_A"]
material = SubResource( 6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="HitboxA" type="Area2D" parent="MovingPlatform/Platform/Portal_A"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/Platform/Portal_A/HitboxA"]
position = Vector2( 8.25, 0 )
shape = SubResource( 4739 )

[node name="Portal_B" type="Position2D" parent="."]
position = Vector2( -129, -46 )

[node name="Texture" type="Sprite" parent="Portal_B"]
show_behind_parent = true
material = SubResource( 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="HitboxB" type="Area2D" parent="Portal_B"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal_B/HitboxB"]
position = Vector2( 8.25, 0 )
shape = SubResource( 2 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="TeleportSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="MovingPlatform/Platform/Portal_A/HitboxA" to="." method="_on_HitboxA_body_entered"]
[connection signal="body_entered" from="Portal_B/HitboxB" to="." method="_on_HitboxB_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
